fix the bug of the chapter divider showing on small screens on desktop

--- a/src/components/ReaderText/styles.css
+++ b/src/components/ReaderText/styles.css
@@ -151,7 +151,7 @@
         animation: fadeIn;
         animation-duration: 1.3s;
     }
-    #divider {
+    #readerText[istablet="true"] #divider {
         display: block;
     }
 }
